<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/productName"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/productName_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/productName"
            android:layout_marginLeft="6dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/availableInventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/availableInventory"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/availableInventory_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/availableInventory"
            android:layout_marginLeft="6dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/price"
            android:layout_marginLeft="6dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/unitsSold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unitsSold"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/unitsSold_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/unitsSold"
            android:layout_marginLeft="6dp"/>
    </RelativeLayout>

</LinearLayout>